Fixed alignment issues in home and user home pages

--- a/DigitalNoticeBoard/src/main/webapp/resources/css/home.css
+++ b/DigitalNoticeBoard/src/main/webapp/resources/css/home.css
@@ -80,3 +80,6 @@
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
+.short-notice-slider{
+	background-color:#8c8c8c;
+}
